# schablone

./: Cargo.toml  README.md
schablone-builder/: Cargo.toml  README.md
schablone-builder/src/: main.rs
src/: main.rs  schablone.rs
