[package]
name = "schablone"
version = "0.1.0"
authors = ["teraku"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A command-line utility that creates projects from a Schablone (template)."
homepage = "https://github.com/Milchdealer/schablone"
repository = "https://github.com/Milchdealer/schablone"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
tera = "~1.5"
snafu = "~0.6"
