[package]
name = "schablone-builder"
version = "0.2.1"
authors = ["Milchdealer/Teraku"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A command-line utility that creates projects from a Schablone (template)."
homepage = "https://github.com/Milchdealer/schablone"
repository = "https://github.com/Milchdealer/schablone"
documentation = "https://docs.rs/schablone"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
tera = "~1.5"
snafu = "~0.6"
log = "~0.4"
env_logger = "~0.7"
serde_json = "~1.0"
